# fourier-visualizer

./: .gitignore  CMakeLists.txt  README.md
include/: FourierEngine.h  InputHandler.h  PathData.h  Renderer.h  Types.h  UIManager.h
src/: FourierEngine.cpp  InputHandler.cpp  PathData.cpp  Renderer.cpp  UIManager.cpp  main.cpp
